--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.4",
     "node-modules": "^1.0.1",
     "puppeteer": "^19.5.2",
     "puppeteer-extra": "^3.3.4",
