--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.2.4",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "node-modules": "^1.0.1",
     "puppeteer": "^19.5.2",
