--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "devjobsdaily",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "dev": "parcel charts/index.html",
     "build": "parcel build charts/index.html",
