--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-react-app-example",
+  "name": "Dev Jobs Daily Backend",
   "version": "0.1.0",
   "scripts": {
     "start": "react-scripts start",
